--- a/tags.yaml
+++ b/tags.yaml
@@ -1,7 +1,7 @@
 tags:
   tag:
-    en: tag en
-    fr: tag fr
+    en: tag
+    fr: tag
   mon-tag:
-    en: taggg
-    fr: marqueur
+    en: Tague
+    fr: Marqueur
